crates/plotnik-lib/tests/02-parser/recovery_validation/capture_name_camel_case.txt
(a) @fooBar
==== diagnostics ====
error: capture names must be snake_case
 --> query.ptk:1:5
  |
1 | (a) @fooBar
  |     ^^^^^^^
  |
help: use `@foo_bar`
  |
1 - (a) @fooBar
1 + (a) @foo_bar
  |
help: captures become fields in the output
